--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "babel --plugins transform-es2015-modules-umd,@babel/plugin-transform-react-jsx src --ignore __tests__ --out-dir ./",
+    "prepublish": "babel --plugins transform-es2015-modules-umd,@babel/plugin-transform-react-jsx,@babel/plugin-transform-typescript src --ignore __tests__ --out-dir ./",
     "test": "echo 'test'",
     "build:demo": "npm run remove:demo; babel-node ./node_modules/.bin/webpack --config ./webpack.config.js",
     "remove:demo": "rm docs/index.html; rm docs/main*; rm docs/vendors*;",
@@ -48,16 +48,24 @@
     "@babel/node": "^7.5.0",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-typescript": "^7.5.1",
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.14",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.7.0",
     "react-click-outside": "^3.0.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.7.0",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
@@ -67,6 +75,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.4",
+    "@types/recompose": "^0.30.6",
     "prop-types": "^15.5.10",
     "recompose": "0.27.1 - 0.30.0"
   }
