update file to output typings file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
+    "sourceMap": false,
     "strictNullChecks": true,
     "module": "esnext",
     "jsx": "react",
     "target": "es5",
-    "allowJs": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "esModuleInterop": true,
+    "declaration": true,
     "lib": ["dom", "es2017", "es5", "es6", "es7"],
     "outDir": "./dist",
     "strict": true
