--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "babel --plugins transform-es2015-modules-umd,@babel/plugin-transform-react-jsx,@babel/plugin-transform-typescript src --ignore __tests__ --out-dir ./",
+    "prepare": "./node_modules/.bin/tsc",
     "test": "echo 'test'",
     "build:demo": "npm run remove:demo; babel-node ./node_modules/.bin/webpack --config ./webpack.config.js",
     "remove:demo": "rm docs/index.html; rm docs/main*; rm docs/vendors*;",
@@ -39,7 +39,7 @@
     "minor": "npm version minor && npm publish && npm run clean",
     "major": "npm version major && npm publish && npm run clean",
     "watch": "babel-node ./node_modules/.bin/webpack --watch --config ./webpack.config.dev.js",
-    "clean": "rm -rf helpers/; rm -f *Loader.js; rm -f index.js; rm -rf docs/js",
+    "clean": "rm -rf helpers/; rm -f *Loader.js; rm -f *Loader.d.ts; rm -f index.js; rm -f index.d.ts; rm -f interfaces.js; rm -f interfaces.d.ts; rm -rf docs/js",
     "lint": "./node_modules/.bin/tslint --config tslint.json --format stylish --project . --fix"
   },
   "types": "./src/index.d.ts",
