update test script

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepare": "./node_modules/.bin/tsc",
-    "test": "echo 'test'",
+    "test": "npm run lint",
     "build:demo": "npm run remove:demo; babel-node ./node_modules/.bin/webpack --config ./webpack.config.js",
     "remove:demo": "rm docs/index.html; rm docs/main*; rm docs/vendors*;",
     "patch": "npm version patch && npm publish --next && npm run clean",
