--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,20 @@ jobs: # a collection of steps
     working_directory: ~/react-spinners # directory where steps will run
     docker: # run the steps with Docker
       - image: circleci/node:latest # ...with this image as the primary container; this is where all `steps` will run
-    steps: # a collection of executable commands 
+    steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
-          name: update-npm 
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache: # special step to restore the dependency cache 
+          name: update-npm
+          command: "sudo npm install -g npm@latest"
+      - restore_cache: # special step to restore the dependency cache
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: install-npm-wee
+          name: installing-depdencendies
           command: npm install
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
+      - run:
+          name: linting
+          command: npm run lint
