--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "clean": "rm -rf helpers/; rm -f *Loader.js; rm -f *Loader.d.ts; rm -f index.js; rm -f index.d.ts; rm -f interfaces.js; rm -f interfaces.d.ts; rm -rf docs/js",
     "lint": "./node_modules/.bin/tslint --config tslint.json --format stylish --project . --fix",
     "test:jest": "./node_modules/.bin/jest --coverage --coverageReporters=text-lcov",
-    "coveralls": "coveralls"
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "types": "./src/index.d.ts",
   "devDependencies": {
