--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs: # a collection of steps
     working_directory: ~/react-spinners # directory where steps will run
     docker: # run the steps with Docker
       - image: circleci/node:latest # ...with this image as the primary container; this is where all `steps` will run
+    parallelism: 4
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
