--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "major": "npm version major && npm publish && npm run clean",
     "watch": "babel-node ./node_modules/.bin/webpack --watch --config ./webpack.config.dev.js",
     "clean": "rm -rf helpers/; rm -f *Loader.js; rm -f *Loader.d.ts; rm -f index.js; rm -f index.d.ts; rm -f interfaces.js; rm -f interfaces.d.ts; rm -rf docs/js",
-    "lint": "./node_modules/.bin/tslint --config tslint.json --format stylish --project . --fix",
+    "lint": "./node_modules/.bin/eslint src",
     "test:jest": "./node_modules/.bin/jest --runInBand",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "remove:tag": "npm dist-tag rm react-spinners"
@@ -62,6 +62,8 @@
     "@types/react-click-outside": "^3.0.3",
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "^16.8.5",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.15",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
@@ -69,6 +71,9 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-react": "^7.20.4",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
@@ -81,7 +86,7 @@
     "ts-loader": "^6.0.4",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.9.7",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
   },
