--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "alwaysStrict": true,
+    // "alwaysStrict": true,
     "sourceMap": false,
     "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "strictBindCallApply": true,
+    // "strictFunctionTypes": true,
+    // "strictPropertyInitialization": true,
+    // "strictBindCallApply": true,
     "module": "commonjs",
     "jsx": "react",
     "target": "es5",
@@ -14,13 +14,13 @@
     "esModuleInterop": true,
     "declaration": true,
     "lib": ["dom", "es2017", "es5", "es6", "es7"],
-    "outDir": ".",
-    "strict": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "outDir": "."
+    // "strict": true,
+    // "noImplicitAny": true,
+    // "noImplicitThis": true,
+    // "noImplicitReturns": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true
   },
   "exclude": ["docs/*", "webpack.config.*", "*.js"]
 }
