--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "main": "index.js",
   "scripts": {
+    "prepare": "./node_modules/.bin/tsc --build tsconfig.build.json",
     "test": "npm run lint",
     "build:demo": "npm run remove:demo; babel-node ./node_modules/.bin/webpack --config ./webpack.config.js",
     "remove:demo": "rm docs/index.html; rm docs/javascripts/*",
