--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "exclude": ["docs/*", "webpack.config.*", "*.js"]
+  "exclude": ["docs/*", "webpack.config.*", "*.js", "__tests__", "examples"]
 }
