--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "main": "index.js",
   "type": "module",
+  "module": "index.js",
   "scripts": {
     "prepare": "./node_modules/.bin/tsc --build tsconfig.build.json",
     "test": "npm run lint",
