--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
   "presets": ["@babel/preset-react", "@babel/preset-env"],
   "plugins": [
-    "emotion",
+    "@emotion",
+    "@babel/plugin-transform-modules-commonjs",
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-transform-typescript"
