--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "coveralls": "^3.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
@@ -85,6 +84,7 @@
     "fork-ts-checker-webpack-plugin": "^6.0.8",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-click-outside": "^3.0.1",
     "react-color": "2.18.1",
