--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "webpack-cli": "^4.8.0"
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0",
-    "react-dom": "^16.0.0 || ^17.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1"
