--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/eslint-plugin": "^11.2.0",
     "@emotion/jest": "^11.3.0",
+    "@testing-library/react": "^13.2.0",
     "@types/enzyme": "^3.10.9",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^27.0.2",
@@ -85,10 +86,10 @@
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-click-outside": "^3.0.1",
     "react-color": "2.19.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.1.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
