--- a/package.json
+++ b/package.json
@@ -82,7 +82,10 @@
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-testing-library": "^5.5.0",
+    "eslint-plugin-unicorn": "^42.0.0",
     "fork-ts-checker-webpack-plugin": "^6.3.4",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.2.4",
