--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "[ruby]": {
-    "editor.defaultFormatter": "mbessey.vscode-rufo"
-  }
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
