--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -81,9 +81,9 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true'
       - run: yarn run clean
       - run: yarn run build:demo
-      - name: check if there are changes
-        id: changes
-        uses: UnicornGlobal/has-changes-action@v1.0.11
-      - name: error has changes
-        if: steps.changes.outputs.changed == 1
+      - name: Check if there is any change
+        id: get-changes
+        run: echo "::set-output name=changed::$(git status --porcelain | wc -l)"
+      - name: Do something if there is any change
+        if: steps.get-changes.outputs.changed != 0
         run: echo "Commit docs changes by running yarn run build:demo"
