--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "major": "npm version major && npm publish && npm run clean",
     "watch": "babel-node ./node_modules/.bin/webpack --watch --config ./webpack.config.dev.js & open docs/index.html",
     "clean": "rm -rf helpers/; rm -f *Loader.js; rm -f *Loader.d.ts; rm -f index.js; rm -f index.d.ts; rm -f interfaces.js; rm -f interfaces.d.ts; rm -rf docs/js; rm -rf cjs; rm -rf esm; rm -rf umd",
-    "lint": "./node_modules/.bin/eslint src __tests__ examples",
+    "lint": "./node_modules/.bin/eslint src examples",
     "test": "jest",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "remove:tag": "npm dist-tag rm react-spinners",
