demo site action do not fail on alpha / beta verions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,6 +61,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: get current package version
+        id: current-version
+        run: echo ::set-output name=value::$(cat ${PACKAGE_JSON_PATH}/package.json | jq '.version' | tr -d '"')
+      - name: check if current version is alpha or beta
+        id: pre-release
+        run: echo ::set-output name=value::${{ contains(steps.current-version.outputs.value, 'alpha') || contains(steps.current-version.outputs.value, 'beta') }}
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
@@ -83,5 +89,5 @@ jobs:
         id: changes
         run: echo "::set-output name=changed::$(git status --porcelain | wc -l)"
       - name: error out if there are any changes
-        if: steps.changes.outputs.changed != 0
+        if: steps.changes.outputs.changed != 0 || steps.pre-release.outputs.value != 'true'
         run: exit 1
