--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,7 +63,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: get current package version
         id: current-version
-        run: echo ::set-output name=value::$(cat ${PACKAGE_JSON_PATH}/package.json | jq '.version' | tr -d '"')
+        run: echo ::set-output name=value::$(cat package.json | jq '.version' | tr -d '"')
       - name: check if current version is alpha or beta
         id: pre-release
         run: echo ::set-output name=value::${{ contains(steps.current-version.outputs.value, 'alpha') || contains(steps.current-version.outputs.value, 'beta') }}
