--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "fork-ts-checker-webpack-plugin": "^7.2.11",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-click-outside": "^3.0.1",
