--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react": "^18.1.0",
     "react-click-outside": "^3.0.1",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
     "react-ga4": "^1.4.1",
     "ts-jest": "^28.0.3",
