--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -16,22 +16,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          cache: "npm"
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.0"
-      - run: npm install --global yarn
 
-      - uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      - uses: ./.github/actions/setup-node
+
       - name: Build demo site
         run: yarn run build:demo
       - name: Create stories
