--- a/.github/actions/setup-node/action.yaml
+++ b/.github/actions/setup-node/action.yaml
@@ -7,8 +7,10 @@ runs:
       with:
         node-version: 16.x
     - run: npm install --global yarn
+      shell: bash
     - uses: actions/setup-node@v3
       with:
         node-version: 16.x
         cache: "yarn"
     - run: yarn install
+      shell: bash
