--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,14 @@
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
     "strictBindCallApply": true,
-    "module": "es2015",
+    "module": "es2020",
     "jsx": "react",
     "target": "es5",
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "declaration": true,
-    "lib": ["dom", "es2017", "es5", "es6", "es7"],
+    "lib": ["dom", "es2017", "es5", "es6", "es7", "esnext"],
     "outDir": ".",
     "strict": true,
     "noImplicitAny": true,
