--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "build:cjs": "tsc --project tsconfig.cjs.json --outDir cjs",
     "build:esm": "tsc --project tsconfig.esm.json --outDir esm",
     "build:umd": "tsc --project tsconfig.umd.json --outDir umd",
-    "build:demo": "npm run remove:demo; babel-node ./node_modules/.bin/webpack --config ./webpack.config.js",
-    "remove:demo": "rm docs/index.html; rm docs/javascripts/*",
+    "build:demo": "$npm_execpath run vite build",
+    "dev:demo": "vite dev",
     "patch": "npm version patch && npm publish && npm run clean",
     "minor": "npm version minor && npm publish && npm run clean",
     "major": "npm version major && npm publish && npm run clean",
-    "watch": "babel-node ./node_modules/.bin/webpack --watch --config ./webpack.config.dev.js & open docs/index.html",
     "clean": "rm -rf helpers/; rm -f *Loader.js; rm -f *Loader.d.ts; rm -f index.js; rm -f index.d.ts; rm -rf docs/js; rm -rf cjs; rm -rf esm; rm -rf umd",
     "lint": "./node_modules/.bin/eslint src examples",
     "test": "jest",
@@ -50,15 +49,9 @@
     "remove:tag": "npm dist-tag rm react-spinners next",
     "publish:next": "npm publish --tag next && npm run clean",
     "storybook": "start-storybook --docs -p 6006",
-    "build-storybook": "build-storybook --docs -o ./docs/storybook"
+    "build-storybook": "build-storybook --docs -o ./dist/storybook"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.5",
-    "@babel/node": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@mdx-js/react": "^2.1.5",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-docs": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
@@ -77,8 +70,7 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
-    "babel-loader": "^9.1.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "coveralls": "^3.1.1",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
@@ -87,8 +79,6 @@
     "eslint-plugin-storybook": "^0.6.7",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unicorn": "^45.0.1",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.0",
@@ -99,10 +89,8 @@
     "react-ga4": "^1.4.1",
     "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^29.0.3",
-    "ts-loader": "^9.4.2",
     "typescript": "^4.9.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "vite": "^5.3.1"
   },
   "peerDependencies": {
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
