--- a/package.json
+++ b/package.json
@@ -48,20 +48,19 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "remove:tag": "npm dist-tag rm react-spinners next",
     "publish:next": "npm publish --tag next && npm run clean",
-    "storybook": "start-storybook --docs -p 6006",
-    "build-storybook": "build-storybook --docs -o ./dist/storybook"
+    "storybook": "storybook dev --docs -p 6006",
+    "build-storybook": "storybook build --docs -o ./dist/storybook"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-docs": "^6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
-    "@storybook/addon-google-analytics": "^6.2.9",
-    "@storybook/addon-interactions": "^6.5.14",
-    "@storybook/addon-links": "^6.5.14",
-    "@storybook/builder-webpack5": "^6.5.14",
-    "@storybook/manager-webpack5": "^6.5.14",
-    "@storybook/react": "^6.5.14",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^8.1.10",
+    "@storybook/addon-docs": "^8.1.10",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
+    "@storybook/addons": "7.6.17",
+    "@storybook/react": "^8.1.10",
+    "@storybook/react-vite": "^8.1.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.12",
@@ -87,7 +86,8 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
-    "storybook-dark-mode": "^1.1.2",
+    "storybook": "^8.1.10",
+    "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
