--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,19 @@ updates:
     directory: "/.github/actions/setup-node"
     schedule:
       interval: "daily"
+    groups:
+      github-actions:
+        patterns: ["*"]
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    groups:
+      storybook:
+        patterns: ["@storybook/*"]
+      testing:
+        patterns: ["@testing-library/*", "jest*", "ts-jest"]
+      eslint:
+        patterns: ["eslint*", "@typescript-eslint/*"]
+      react:
+        patterns: ["react", "react-dom", "@types/react", "@types/react-dom"]
