--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build:esm": "tsc --project tsconfig.esm.json --outDir esm",
     "build:umd": "tsc --project tsconfig.umd.json --outDir umd",
     "build:demo": "$npm_execpath run vite build",
-    "dev:demo": "vite dev",
+    "dev": "vite dev",
     "patch": "npm version patch && npm publish && npm run clean",
     "minor": "npm version minor && npm publish && npm run clean",
     "major": "npm version major && npm publish && npm run clean",
@@ -52,15 +52,15 @@
     "build-storybook": "storybook build --docs -o ./dist/storybook"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^8.1.10",
-    "@storybook/addon-docs": "^8.1.10",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
-    "@storybook/addons": "7.6.17",
-    "@storybook/react": "^8.1.10",
-    "@storybook/react-vite": "^8.1.10",
+    "@storybook/addon-actions": "^8.6.12",
+    "@storybook/addon-docs": "^8.6.12",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/addons": "7.6.20",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.12",
@@ -86,7 +86,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
-    "storybook": "^8.1.10",
+    "storybook": "^8.6.12",
     "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.2",
