--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,16 +13,13 @@ updates:
     directory: "/.github/actions/setup-node"
     schedule:
       interval: "daily"
-    groups:
-      github-actions:
-        patterns: ["*"]
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
     groups:
       storybook:
-        patterns: ["@storybook/*"]
+        patterns: ["@storybook/*", "storybook"]
       testing:
         patterns: ["@testing-library/*", "jest*", "ts-jest"]
       eslint:
