--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-spinners",
-  "version": "0.16.1",
+  "version": "0.17.0-beta.1",
   "description": "A collection of react loading spinners",
   "repository": {
     "type": "git",
