chore: add test files to npmignore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,14 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "exclude": ["docs/*", "webpack.config.*", "*.js", "tests", "examples", "src/*.test.tsx", "stories"]
+  "exclude": [
+    "docs/*",
+    "webpack.config.*",
+    "*.js",
+    "tests",
+    "examples",
+    "src/*.test.tsx",
+    "stories",
+    "test-apps"
+  ]
 }
