--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,15 +8,15 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "github-actions"
     directory: "/.github/actions/setup-node"
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     groups:
       storybook:
         patterns: ["@storybook/*", "storybook"]
